# ZeldaCpp

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: Constants.h  constants.hpp  globals.hpp  zelda.hpp
include/ecs/: Ecs.hpp  GameObj.hpp  GameObjPool.hpp  Group.hpp  GroupPool.hpp  components.h  components.hpp  ecs.h  ecs.hpp  game_obj_pool.hpp
include/ecs/component/: Sprite.hpp
include/ecs/components/: Animation.hpp  AnimationPool.hpp  Player.hpp  PlayerMovement.hpp  Sprite.h  Sprite.hpp  SpriteAnimation.hpp  animation.hpp  components.hpp  mask.hpp  player.hpp  sprite.hpp  tree.hpp
include/group/: camera.hpp  group.hpp
include/ougi/: animation.hpp  camera.hpp  group.hpp  mask.hpp  ougi.hpp  player.hpp  sprite.hpp
include/scene/: Level.h  Level.hpp  Scene.h  Scene.hpp  level.hpp  scene.hpp  scenes.h  scenes.hpp
include/util/: Direction.hpp  GameObjState.hpp  Rect.h  Rect.hpp  TexturePool.h  TexturePool.hpp  Transform.hpp  action.hpp  animation_group.hpp  camera.hpp  debug.hpp  direction.hpp  game_obj_state.hpp  game_obj_stats.hpp  group_pool.hpp  map_obj.hpp  rect.hpp  task.hpp  text.hpp  texture_pool.hpp  timer.hpp  transform.hpp  util.h  util.hpp  zIndex.hpp  z_index.hpp
include/util/group/: camera.hpp  game_obj_group.hpp  group.hpp
include/window/: Camera.h  Camera.hpp  Window.h  Window.hpp  window.hpp
src/: component.hpp  component_array.h  component_array.hpp  component_manager.h  component_manager.hpp  component_type.h  component_type.hpp  components.h  constants.h  constants.hpp  ecs.h  ecs.hpp  entity_manager.cpp  entity_manager.h  entity_manager.hpp  globals.cpp  globals.h  globals.hpp  main.cpp  mrandom.cpp  mrandom.hpp  player.hpp  scene.h  scene.hpp  scene_level.cpp  scene_level_scene.cpp  scene_manager.cpp  scene_manager.h  scene_manager.hpp  scene_title_screen.cpp  sprite.h  system.h  system.hpp  system_animation.cpp  system_controller.cpp  system_manager.cpp  system_manager.h  system_manager.hpp  system_obstacle.cpp  system_player.cpp  (+18 more)
src/ecs/: Ecs.cpp  GameObj.cpp  GameObjPool.cpp  Group.cpp  GroupPool.cpp  component.cpp  ecs.cpp  game_obj.cpp  game_obj_pool.cpp  group.cpp
src/ecs/component/: Sprite.cpp
src/ecs/components/: Animation.cpp  AnimationPool.cpp  Player.cpp  PlayerMovement.cpp  Sprite.cpp  SpriteAnimation.cpp  animation.cpp  mask.cpp  player.cpp  sprite.cpp  tree.cpp
src/group/: camera.cpp  group.cpp
src/ougi/: animation.cpp  camera.cpp  group.cpp  mask.cpp  player.cpp  sprite.cpp
src/scene/: Level.cpp  level.cpp  scene.cpp  scenes.cpp
src/util/: Rect.cpp  TexturePool.cpp  TexurePool.cpp  Transform.cpp  animation_group.cpp  camera.cpp  debug.cpp  rect.cpp  task.cpp  text.cpp  texture_pool.cpp  timer.cpp  transform.cpp  util.cpp
src/util/group/: camera.cpp  game_obj_group.cpp  group.cpp
src/window/: Camera.cpp  Window.cpp  window.cpp
test/: perf_test.sh
